# libspnav

./: .gitignore  .spnav.c.swp  .spnav.h.swp  .spnav_magellan.c.swp  .spnav_magellan.h.swp  LICENSE  Makefile.in  README  README.md  configure  meson.build  meson_options.txt  spnav.c  spnav.h  spnav.pc.in  spnav_config.h  spnav_magellan.c  spnav_magellan.h
.github/workflows/: build_freebsd.yml  build_gnulinux.yml  build_macosx.yml
doc/: Makefile  man_head.html  manual.css  manual.md
examples/: Makefile  meson.build  simple.c
examples/cube/: Makefile  cube.c  meson.build  vmath.h  vmath.inl  xwin.h
examples/fly/: Makefile  fly.c  xwin.c
examples/simple/: Makefile  meson.build  simple.c
include/: spnav.h  spnav_magellan.h
src/: inpsrc.h  proto.h  spnav.c  spnav.h  spnav_magellan.c  spnav_x11.c  spnav_x11.h  util.c
